maze.lessons.maze.shortestpath.ShortestPathMaze.scala.error
JediEscaper:3: error: ';' expected but integer literal found.
  var Tx = Array[Int] 4
                      ^JediEscaper:4: error: ';' expected but integer literal found.
  var Ty = Array[Int] 4
                      ^JediEscaper:13: error: ';' expected but ',' found.
  if (!aMurNord(x,y) && getIndication(x,y-1)!=9999) {setIndication(x,y-1,k+1),Tx(0)=x;Ty(0)=y-1}
                                                                             ^JediEscaper:14: error: ';' expected but ',' found.
  if (!aMurOuest(x,y) && getIndication(x-1,y)!=9999) {setIndication(x-1,y,k+1),Tx(1)=x-1;Ty(1)=y}
                                                                              ^JediEscaper:15: error: ';' expected but ',' found.
  if (!aMurNord(x,y+1) && getIndication(x,y+1)!=9999) {setIndication(x,y+1,k+1),Tx(2)=x;Ty(2)=y+1}
                                                                               ^JediEscaper:16: error: ';' expected but ',' found.
  if (!aMurOuest(x+1,y) && getIndication(x+1,y)!=9999) {setIndcication(x,y+1,k+1),Tx(3)=x+1;Ty(3)=y}                                                  
                                                                                 ^